fixed overflow on multiple pages

--- a/src/style.css
+++ b/src/style.css
@@ -5,4 +5,5 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  overflow: hidden;
 }
